--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cryptic Writer</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>LCIS</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Cryptic Writer</h1>
-        <h2>Solving puzzles with words and words with puzzles.</h2>
+        <img src="images/logo.png" alt="Logo">
+        <div>
+            <h1>LCIS</h1>
+            <p>Littlecapa's Information System</p>
+        </div>
     </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="finance.html">Finance</a>
+        <a href="ai.html">Artifical Intelligence</a>
+        <a href="chess.html">Chess</a>
+        <a href="travel.html">Travel</a>
+        <a href="links.html">Links</a>
+    </nav>
     <main>
-        <section>
-            <h2>What I Do (for Work)</h2>
-            <p>I'm a technical writer with over 100 books to my credit...</p>
-        </section>
-        <section>
-            <h2>What I Do (for Fun)</h2>
-            <p>My hobbies and interests include cryptic crosswords, word puzzles, puns, bread baking, typography, Art Deco...</p>
-        </section>
-        <section>
-            <h2>What I Read</h2>
-            <p>I'm currently reading Landlines, by Raynor Winn. Recent reads are The Faraway Nearby by Rebecca Solnit, Journal of a Solitude by May Sarton...</p>
-        </section>
-        <section>
-            <h2>What I Am</h2>
-            <p>Although I was born in Toronto, my parents are both Scottish, which explains my love of both bagpipes and haggis...</p>
-        </section>
+        <article>
+            <h2>Latest Updates</h2>
+            <!-- Article content goes here -->
+        </article>
+        <aside>
+            <h3>Chess Tactics</h3>
+            <!-- https://schach.de/de/howto/embedtactics -->
+            <iframe src="https://livetactics.chessbase.com" width="400" height="440"></iframe>
+        </aside>
     </main>
+    <footer>© Littlecapa</footer>
 </body>
 </html>
